--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      MONGO_URI: "your_mongodb_atlas_connection_string"
+      MONGO_URI: "mongodb+srv://huybui:huybui123@cluster0.atjqmys.mongodb.net/photoapp?retryWrites=true&w=majority&appName=Cluster0"
     volumes:
       - ./backend:/usr/src/app
     depends_on:
