--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
 # Stage 1: Build the React application
-FROM node:14 AS build
+FROM node:16
 
 WORKDIR /app
 
 # Copy package.json and package-lock.json first to leverage Docker caching
-COPY package*.json ./
+COPY package*.json .
 
 # Install dependencies
 RUN npm install
@@ -12,17 +12,7 @@ RUN npm install
 # Copy the entire application
 COPY . .
 
-# Build the application
-RUN npm run build
-
-# Stage 2: Serve the built application using Nginx
-FROM nginx:alpine
-
-# Copy the built app from the build stage
-COPY --from=build /app/build /usr/share/nginx/html
-
 # Expose port 80 to the outer world
 EXPOSE 80
 
-# Start Nginx server
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "start"]
