--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
       context: ./backend
     container_name: node-backend
     ports:
-      - "3000:3000"
-    environment:
-      MONGO_URI: "mongodb+srv://huybui:huybui123@cluster0.atjqmys.mongodb.net/photoapp?retryWrites=true&w=majority&appName=Cluster0"
+      - "8081:8081"
     volumes:
-      - ./backend:/usr/src/app
+      - ./backend:/app
     depends_on:
       - frontend
 
@@ -19,6 +17,6 @@ services:
       context: ./frontend
     container_name: react-frontend
     ports:
-      - "80:80"
+      - "3000:3000"
     volumes:
-      - ./frontend:/usr/src/app
+      - ./frontend:/app
